# pytorch-workshop

./: .gitignore  NOTICE  README.md  pyproject.toml  requirements.txt
assets/checkpoints/models/: model_1.pth
assets/images/pytorch/: ATTRIBUTION.md
assets/models/: model_1.pth  model_2.pth  model_3.pth
code/: 01-tensor.ipynb  02-gradient.ipynb  03-simple-neurons.ipynb  04-regression-model.ipynb  05-multi-layer-perceptrons.ipynb  06-radial-basis-function-networks.ipynb  07-convolutional-neural-networks.ipynb  08-feature-extraction.ipynb  09-model-reuse.ipynb  09-transfer-learning.ipynb  10-fine-tuning.ipynb  11-recurrent-neural-networks.ipynb
code/base/: 01-linalg-basics.ipynb  02-convolution.ipynb
code/models/cnn/: alexnet-architecture.ipynb  classic-and-foundational.ipynb  densenet-architecture.ipynb  efficientnet-architecture.ipynb  googlenet-architecture.ipynb  googlenet.ipynb  lenet5-architecture.ipynb  lenet5.ipynb  resnet-architecture.ipynb  resnet.ipynb  vggnet-architecture.ipynb  xception-architecture.ipynb  xception.ipynb
code/projects/: 04-word2vec-word-embedding.ipynb
code/projects/cifar-classification/: README.md
code/projects/cifar-classification/cifar-10/implementation-1/: cifar10-classification.ipynb
code/projects/cifar-classification/cifar-10/implementation-1/results/: test_metrics.csv  test_top_1_confusion_matrix.csv  train_val_metrics.csv
code/projects/mnist-classification/implementation-1/: mnist-classification.ipynb
code/projects/mnist-classification/implementation-1/results/: test_top_1_confusion_matrix.csv
code/utils/: activation-functions.ipynb  activation.ipynb  checkpoint.ipynb  custom-classes.ipynb  dataset-dataloader.ipynb  dataset.ipynb  hyperparameter.ipynb  hyperparameters.ipynb  loss-functions.ipynb  loss.ipynb  metric.ipynb  model-creation.ipynb  normalization.ipynb  normalizations.ipynb  optimizer.ipynb  vision-transform.ipynb  vision-transforms.ipynb  word-embedding.ipynb  word-embeddings.ipynb
codes/: 00_tensor.ipynb  01-tensor.ipynb  01_gradient.ipynb  01_tensor.ipynb  02-gradient.ipynb  02_gradient.ipynb  02_linear-regression.ipynb  02_perceptron.ipynb  03-perceptron.ipynb  03-simple-neurons.ipynb  03_activation-function.ipynb  03_activation.ipynb  03_linear-regression.ipynb  03_perceptron.ipynb  04-linear-regression.ipynb  04-regression-model.ipynb  04_activation-functions.ipynb  04_linear-regression.ipynb  04_logistic-regression.ipynb  04_loss.ipynb  05-logistic-regression.ipynb  05-multi-layer-perceptrons.ipynb  05_dataset.ipynb  05_logistic-regression.ipynb  05_loss-functions.ipynb  05_multi-layer-perceptron.ipynb  06-multi-layer-perceptrons.ipynb  06-radial-basis-function-networks.ipynb  06_dataset.ipynb  06_logistic-regression.ipynb  06_multi-layer-perceptrons.ipynb  06_radial-basis-function-networks.ipynb  07-convolutional-neural-networks.ipynb  07-radial-basis-function-networks.ipynb  07_convolutional-neural-networks.ipynb  07_custom-class.ipynb  07_radial-basis-function-networks.ipynb  08-convolutional-neural-networks.ipynb  08-feature-extraction.ipynb  08_convolutional-neural-networks.ipynb  (+40 more)
codes/models/0. CNN/: 00_lenet5-architecture.ipynb  02_vggnet-architecture.ipynb  03_googlenet-architecture.ipynb  04_resnet-architecture.ipynb  05_densenet-architecture.ipynb  06_efficientnet-architecture.ipynb
codes/models/0_CNN/: 00_lenet5-architecture.ipynb  01_alexnet-architecture.ipynb  02_vggnet-architecture.ipynb  03_googlenet-architecture.ipynb  04_resnet-architecture.ipynb  05_densenet-architecture.ipynb
codes/models/CNN/: 00_lenet5-architecture.ipynb  01_lenet5-architecture.ipynb  02_alexnet-architecture.ipynb  02_vggnet-architecture.ipynb  03_googlenet-architecture.ipynb  03_vggnet-architecture.ipynb  04_googlenet-architecture.ipynb  04_resnet-architecture.ipynb  05_resnet-architecture.ipynb  06_densenet-architecture.ipynb  07_efficientnet-architecture.ipynb
codes/models/cnn/: 01-lenet5-architecture.ipynb  02-alexnet-architecture.ipynb  03-vggnet-architecture.ipynb  04-googlenet-architecture.ipynb  05-resnet-architecture.ipynb  06-densenet-architecture.ipynb  07-efficientnet-architecture.ipynb  alexnet-architecture.ipynb  densenet-architecture.ipynb  efficientnet-architecture.ipynb  googlenet-architecture.ipynb  lenet5-architecture.ipynb  resnet-architecture.ipynb  vggnet-architecture.ipynb  xception-architecture.ipynb
codes/projects/: 00_multi-layer-perceptron.ipynb  01-multi-layer-perceptrons.ipynb  01_convolutional-neural-networks.ipynb  01_multi-layer-perceptrons.ipynb  02-convolutional-neural-networks.ipynb  02_convolutional-neural-networks.ipynb  03-recurrent-neural-networks.ipynb  04-word2vec-word-embedding.ipynb  04_word2vec-word-embedding.ipynb  encoder-decoder.ipynb
codes/projects/cifar-classification/: README.md
codes/projects/cifar-classification/cifar-10/implementation-1/: cifar10-classification.ipynb
codes/projects/cifar-classification/cifar-10/implementation-1/results/: test_top_1_confusion_matrix.csv
codes/projects/cifar-classification/cifar10/implementation-1/: cifar10-classification.ipynb
codes/projects/gtzan-classification/: README.md
codes/projects/gtzan-classification/implementation-1/: gtzan-classification.ipynb
codes/projects/gtzan-classification/implementation-1/results/: test_metrics.csv  test_top_1_confusion_matrix.csv  train_val_metrics.csv
codes/projects/mnist-classification/: README.md
codes/projects/mnist-classification/implementation-1/: mnist-classification.ipynb
codes/projects/mnist-classification/implementation-1/results/: test_metrics.csv  test_top_1_confusion_matrix.csv  train_val_metrics.csv
codes/utils/: 01_loss-functions.ipynb  02_datasets.ipynb  02_loss-functions.ipynb  04_customs.ipynb  04_transforms.ipynb  06_checkpoints.ipynb  activation-functions.ipynb  checkpoints.ipynb  custom-classes.ipynb  customs.ipynb  data-parallelism.ipynb  dataset-dataloader.ipynb  datasets.ipynb  hyperparameters.ipynb  loss-functions.ipynb  network-normalizations.ipynb  normalizations.ipynb  vision-transforms.ipynb  word-embeddings.ipynb
