[tool.poetry]
package-mode = false
name = "pytorch_workshop"
description = "A comprehensive resource to master PyTorch, from basics to advanced techniques, for deep learning enthusiasts and practitioners"
authors = ["Amirhossein Heydari <amirhosseinheydari78@gmail.com>"]
maintainers = ["Amirhossein Heydari <amirhosseinheydari78@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/mr-pylin/pytorch-workshop"
keywords = ["PyTorch", "deep learning", "machine learning", "neural networks"]
readme = "README.md"

[tool.poetry.urls]
"Amirhossein Heydari Homepage" = "https://mr-pylin.github.io"

[tool.poetry.dependencies]
python = "3.12.8"
datasets = "^3.2.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
matplotlib = "^3.10.0"
numpy = "^2.2.1"
pandas = "^2.2.3"
PySoundFile = "^0.9.0.post1"
scikit-learn = "^1.6.0"
seaborn = "^0.13.2"
torch = { version = "2.5.1+cu124", source = "pytorch" }
torchaudio = { version = "2.5.1+cu124", source = "pytorch" }
torchinfo = "^1.8.0"
torchmetrics = "^1.6.1"
torchvision = { version = "0.20.1+cu124", source = "pytorch" }

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120