[project]
name = "pytorch-workshop"
version = "0.1.0"
description = "A comprehensive resource to master PyTorch, from basics to advanced techniques, for deep learning enthusiasts and practitioners"
authors = [
    {name = "Amirhossein Heydari", email =  "amirhosseinheydari78@gmail.com"}
]
maintainers = [
    {name = "Amirhossein Heydari", email =  "amirhosseinheydari78@gmail.com"}
]
keywords = ["PyTorch", "deep learning", "machine learning", "neural networks"]
readme = "README.md"
license = "Apache-2.0"
license-files = [
    "LICENSE",
    "assets/images/original/LICENSE"
]
requires-python = ">=3.13.9"
dependencies = [
    "ipykernel>=7.0.1,<8.0.0",
    "ipympl>=0.9.8,<1.0.0",
    "ipywidgets>=8.1.7,<9.0.0",
    "datasets>=4.3.0,<5.0.0",
    "matplotlib>=3.10.7,<4.0.0",
    "numpy>=2.3.4,<3.0.0",
    "pandas>=2.3.3,<3.0.0",
    "scikit-learn>=1.7.2,<2.0.0",
    "seaborn>=0.13.2,<1.0.0",
    "soundfile>=0.13.1,<1.0.0",
    "torchinfo>=1.8.0,<2.0.0",
    "torchmetrics>=1.8.2,<2.0.0",
]

[project.urls]
Repository = "https://github.com/mr-pylin/pytorch-workshop"
MyHomepage = "https://mr-pylin.github.io"

[project.optional-dependencies]
cpu = [
    "torch==2.9.0",
    "torchaudio==2.9.0",
    "torchvision==0.24.0",
]
cuda = [
    "torch==2.9.0",
    "torchaudio==2.9.0",
    "torchvision==0.24.0",
]
rocm = [
    "torch==2.9.0",
    "torchaudio==2.9.0",
    "torchvision==0.24.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda" },
    { extra = "rocm" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "cuda" },
#   { index = "pytorch-rocm64", extra = "rocm" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "cuda" },
#   { index = "pytorch-rocm64", extra = "rocm" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "cuda" },
#   { index = "pytorch-rocm64", extra = "rocm" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm64"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[tool.black]
line-length = 120
